Adding ts-loader and changing webpack to build ts instead of js

--- a/skeleton-typescript-webpack/tsconfig.json
+++ b/skeleton-typescript-webpack/tsconfig.json
@@ -18,11 +18,12 @@
     "./src/**/*.ts",
     "./test/**/*.ts",
     "./typings/browser.d.ts",
-    "./custom_typings/**/*.d.ts",
-    "./jspm_packages/**/*.d.ts"
+    "./custom_typings/**/*.d.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "typings/main.d.ts",
+    "typings/main"
   ],
   "atom": {
     "rewriteTsconfig": false
