--- a/skeleton-typescript-webpack/package.json
+++ b/skeleton-typescript-webpack/package.json
@@ -56,6 +56,7 @@
     "karma-webpack": "^1.7.0",
     "protractor": "^3.1.1",
     "raw-loader": "^0.5.1",
+    "ts-loader": "^0.8.1",
     "tslint": "3.2.0",
     "typescript": "1.7.3",
     "style-loader": "^0.13.0",
